package pt.ipp.isep.dei.esoft.project.application.controller;

import pt.ipp.isep.dei.esoft.project.domain.VehicleCheckUp;

public class RegistVehicleCheckUpController {
}
